--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "create-next-app",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "jquery": "^3.3.1",
-    "next": "^6.0.3",
+    "next": "^7.0.2",
     "next-redux-saga": "latest",
     "next-redux-wrapper": "^1.3.2",
+    "next-routes": "^1.4.2",
     "node-sass": "^4.9.0",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
