--- a/package.json
+++ b/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "create-next-app",
+  "name": "learn-starter",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start"
   },
   "dependencies": {
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "jquery": "^3.3.1",
-    "next": "^7.0.2",
-    "next-redux-saga": "latest",
-    "next-redux-wrapper": "^1.3.2",
-    "next-routes": "^1.4.2",
-    "node-sass": "^4.9.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.3.0"
-  },
-  "devDependencies": {
-    "postcss-loader": "^2.1.5",
-    "raw-loader": "^0.5.1",
-    "redux-devtools": "^3.4.1",
-    "sass-loader": "^7.0.1"
+    "@fullpage/react-fullpage": "^0.1.19",
+    "@reduxjs/toolkit": "^1.6.1",
+    "next": "^11.0.0",
+    "next-redux-wrapper": "^7.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0"
   }
 }
